# config-manager

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml  sidecar_explanation.md  test_real_time.py
.github/workflows/: ecr-publish.yml
config_client/: __init__.py  client.py
config_service/: etcd_client.py  models.py  server.py  websocket.py
config_service/static/: app.js  index.html  styles.css
examples/: example_usage.py  setup_test_data.py
infra/cdk/: README.md  app.py  cdk.context.json  cdk.json
infra/cdk/stacks/: ecs_fargate_stack.py
scripts/: build_and_push_ecr.sh  deploy_demo_asset.sh
